<resources>
    <string name="app_name">EisenFlow</string>
    <string name="action_settings">Settings</string>
    <string name="action_today">Today</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>

    <!-- Tutorial -->
    <string name="splash_app_name">EisenFlow</string>
    <string name="splash_quote">“What is important is seldom urgent \nand what is urgent is seldom important.”</string>
    <string name="splash_quote_author">― Dwight D. Eisenhower</string>
    <string name="splash_2_title">Know your colors:</string>
    <string name="splash_2_red_title">Do It Now!</string>
    <string name="splash_2_red_content">Urgent - Important: tasks you will do immediately</string>
    <string name="splash_2_green_title">Decide When</string>
    <string name="splash_2_green_content">Important - Not Urgent: tasks you will schedule to \ndo later</string>
    <string name="splash_2_yellow_title">Delegate It</string>
    <string name="splash_2_yellow_content">Urgent - Not Important: tasks you will delegate to \nsomeone else</string>
    <string name="splash_2_gray_title">Dump It!</string>
    <string name="splash_2_gray_content">Not Urgent - Not Important: tasks you will dump.\nTime wasters!</string>
    <string name="splash_3_title">In which Quadrant are you?</string>
    <string name="splash_3_tips_title">Goals:</string>
    <string name="splash_3_tip_1">* Be proactive: Plan your day in advance</string>
    <string name="splash_3_tip_2">* Be Happy: Spend some time each day \n   doing a tasks from the Green Zone</string>

    <string name="splash_3_tip_3">* Stay away from the Gray Zone</string>
    <string name="splash_3_tip_4">* Keep your list small</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="got_it">Got It</string>
    <string name="finish">Finish</string>

    <!-- Single Task Activity -->
    <!-- Others -->
    <string name="save_button_text">Save</string>
    <string name="enter_task_hint">Enter task name...</string>
    <string name="quadrantOne">Do It Now</string>
    <string name="quadrantTwo">Decide When</string>
    <string name="quadrantThree">Delegate It</string>
    <string name="quadrantFour">Drop It</string>
    <string name="due_date_txt">Due date</string>
    <string name="reminder_txt">Repeating reminder</string>
    <string name="daily_txt">Daily</string>
    <string name="weekly_txt">Weekly</string>
    <string name="monthly_txt">Monthly</string>
    <string name="yearly_txt">Yearly</string>
    <string name="mon_txt">Mon</string>
    <string name="tue_txt">Tue</string>
    <string name="wed_txt">Wed</string>
    <string name="thu_txt">Thu</string>
    <string name="fri_txt">Fri</string>
    <string name="sat_txt">Sat</string>
    <string name="sun_txt">Sun</string>
    <string name="vibration_txt">Vibration</string>
    <string name="note_txt">Notes</string>
    <string name="add_task_alert_title">Alert</string>
    <string name="add_task_priority_alert">Choose task priority.</string>
    <string name="add_task_name_alert">Missing task name.</string>
    <string name="add_task_reminder_when_alert">Missing repeating day/s for your reminder.</string>
    <string name="add_task_date_alert">Your date is in the past.</string>
    <string name="add_task_time_alert">Your time is in the past.</string>
    <string name="priority_0_tip_snackbar">To help your productivity, schedule \'Do it now\' just for the next day.</string>
    <string name="location">Add location</string>
    <string name="no_place_selected">No place selected</string>
    <string name="close_dialog_text">Are you sure you want to discard this task?</string>
    <string name="discard_button">Discard</string>
    <string name="keep_edit">Keep editing</string>
    <!-- Content Descriptions -->
    <string name="close_button_description">Close Single Task Activity</string>
    <string name="save_button_description">Save Task and Exit</string>

    <!-- Main Activity -->
    <string name="share_task_title">Share EisenFlow task</string>
    <string name="share_task_message">Delegated task from EisenFlow. \n\n
        To Do: %1$s \nDue date: %2$s@%3$s \nNote: %4$s</string>
    <string name="no_tasks_msg">No tasks to show</string>
    <string name="no_tasks_add_msg">\"Get specific about your goals \nand keep them visible\"</string>
    <string name="undo_button_text">undo</string>

    <!-- Bottom Sheet -->
    <string name="vibration_on">ON</string>
    <string name="vibration_off">OFF</string>
    <string name="start_timer">Start Timer</string>
    <string name="add_progress">Add Progress</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>

    <!-- Timer Activity -->
    <string name="timer_alert_message">To start, enter time!</string>
    <string name="timer_hour_hint">0</string>
    <string name="timer_hour_text">H</string>
    <string name="timer_minutes_hint">00</string>
    <string name="timer_minutes_text">M</string>
    <string name="timer_seconds_hint">00</string>
    <string name="timer_seconds_text">S</string>

    <!-- Timer Notification -->
    <string name="timer_notification_title">EisenFlow Timer</string>
    <string name="timer_notification_content">Time passed: %1$s</string>
    <string name="timer_notification_play">Play</string>
    <string name="timer_notification_pause">Pause</string>
    <string name="timer_notification_dismiss">Dismiss</string>

    <!-- Reminder Notification -->
    <string name="notification_done">Done</string>
    <string name="notification_add_progress">Add Progress</string>
    <string name="daily_evening_tip_notification">Productive day tomorrow? Plan it now!</string>
    <string name="weekly_tip_notification">Hey, some task are waiting!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- Send Report E-Mail -->
    <string name="chooserTitle">Send report to developer</string>
    <string name="report_body">Kind Regards!\nTell me about your experience with the app. What went wrong?</string>

    <!-- Rate App -->
    <string name="rate_body">If you enjoy using <b>Eisen Flow</b>, please take a moment to rate it.\nThanks for your support!</string>
    <string name="rate_btn">Rate Eisen Flow</string>
    <string name="remind_me_btn">Remind me later</string>
    <string name="not_now_btn">Not now</string>
    <string name="rate_alert">Something went wrong. \nPlease try again later!</string>

    <!-- Settings -->
    <string name="settings_task_filter_key">filter_key</string>
    <string name="settings_task_filter">Main Settings</string>
    <string name="settings_filter_title">Task Filter</string>
    <string name="settings_filter_summary">Task filter will affect both app and widget.</string>

    <!-- Widget -->
    <string name="widget_empty_view">No tasks to show</string>

    <!-- About Dialog -->
    <string name="about_version">Version &#160;</string>
    <string name="about_info">Eisen Flow is an productivity application based on Eisenhower\'s productivity matrix.</string>

    <!-- Drawer Menu -->
    <string name="show_all">Show all tasks</string>
    <string name="do_it_now">Do It Now</string>
    <string name="decide_when">Decide When</string>
    <string name="delegate_it">Delegate It</string>
    <string name="drop_it">Drop It</string>
    <string name="clear_done">Clear Done Tasks</string>
    <string name="additional_menu">More</string>
    <string name="tutorial">Tutorial</string>
    <string name="rate_app">Rate Eisen Flow"</string>
    <string name="send_feedback">Send feedback</string>
    <string name="about">About</string>

    <!-- Content Description -->
    <string name="app_icon">App icon</string>
    <string name="close_activity">Close</string>
    <string name="timer_play_button">Play button</string>
    <string name="timer_pause_button">Pause button</string>
    <string name="timer_progress">Round progress bar</string>
    <string name="calendar_month">Calendar month</string>
    <string name="bottom_sheet_edit">Preview Edit task</string>
    <string name="bottom_sheet_menu">Preview menu</string>
    <string name="tutorial_eisen_matrix">Eisenhower matrix of importance</string>
    <string name="action_icon">Action</string>
    <string name="done_cross_line">Done crossing line</string>
    <string name="tutorial_page_one">Page one</string>
    <string name="tutorial_page_two">Page two</string>
    <string name="tutorial_page_next">Next page</string>
    <string name="widget_done_check">Done check</string>
    <string name="preview_title">Preview Title</string>
    <string name="title_holder">Task title</string>
    <string name="divider">Divider</string>
    <string name="location_delete">Delete location</string>
    <string name="fab_action">Create new task</string>
    <string name="expand_collapse_text">Expand collapse arrow</string>
    <string name="refresh">Refresh</string>
</resources>
