<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item
        android:id="@+id/action_start_timer"
        android:orderInCategory="100"
        android:title="@string/start_timer"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_progress"
        android:orderInCategory="101"
        android:title="@string/add_progress"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="102"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="103"
        android:title="@string/delete"
        app:showAsAction="never" />
</menu>
