<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/splash_screen_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/splashscreen_bg"
        android:weightSum="5"
        android:paddingTop="@dimen/splash_title_margin_top"
        android:paddingBottom="@dimen/activity_vertical_spacing"
        >
        <TextView
            android:id="@+id/splash_3_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"
            android:textSize="@dimen/splash_title_text_size"
            android:text="@string/splash_3_title"
            />

        <ImageView
            android:id="@+id/matrix_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/splash_3_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_spacing"
            android:contentDescription="@string/tutorial_eisen_matrix"
            android:paddingLeft="@dimen/activity_horizontal_spacing"
            android:paddingRight="@dimen/activity_horizontal_spacing"
            android:src="@drawable/eisen_matrix" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginRight="@dimen/splash_3_margin_right"
            android:layout_below="@+id/matrix_image"
            android:paddingLeft="@dimen/activity_horizontal_spacing"
            android:layout_centerHorizontal="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:textSize="@dimen/splash_title_text_size"
                android:text="@string/splash_3_tips_title"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:textSize="@dimen/splash_content_text_size_small"
                android:text="@string/splash_3_tip_1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:textSize="@dimen/splash_content_text_size_small"
                android:text="@string/splash_3_tip_2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:textSize="@dimen/splash_content_text_size_small"
                android:text="@string/splash_3_tip_3"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:textSize="@dimen/splash_content_text_size_small"
                android:text="@string/splash_3_tip_4"
                />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>