<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_holder"
    android:layout_width="match_parent"
    android:layout_height="340dp"
    app:behavior_hideable="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/task_title_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/title_holder"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/default_title_holder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/task_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="48dp"
            android:layout_marginStart="16dp"
            android:background="@color/transparent"
            android:cursorVisible="true"
            android:ellipsize="end"
            android:inputType="textCapSentences|textAutoCorrect"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/edit_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_holder"
            tools:layout_editor_absoluteY="12dp"
            tools:text="Single Task Name" />

        <ImageView
            android:id="@+id/edit_btn"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/pencil" />
    </android.support.constraint.ConstraintLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="241dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_title_holder">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/clock_icon"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/task_icon_size"
                android:layout_marginLeft="@dimen/activity_horizontal_spacing"
                android:layout_marginStart="@dimen/activity_horizontal_spacing"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/calendar_clock" />

            <TextView
                android:id="@+id/due_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_half_spacing"
                android:layout_marginStart="@dimen/activity_half_spacing"
                android:layout_marginTop="24dp"
                android:layout_toEndOf="@+id/clock_icon"
                android:layout_toRightOf="@+id/clock_icon"
                android:gravity="center_vertical"
                android:text="@string/due_date_txt"
                android:textSize="@dimen/task_font_size"
                app:layout_constraintStart_toEndOf="@+id/clock_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/date_holder"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/activity_double_spacing"
                android:layout_marginStart="@dimen/activity_double_spacing"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/due_date_txt">

                <TextView
                    android:id="@+id/date_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_spacing"
                    android:layout_marginStart="@dimen/activity_horizontal_spacing"
                    android:text="Fri, May 27, 2016"
                    android:textColor="@color/colorAccent"
                    android:textSize="17sp"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="140dp"
                    tools:text="Fri, May 27, 2016" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/time_holder"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.184"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/date_holder"
                app:layout_constraintTop_toBottomOf="@+id/due_date_txt">

                <TextView
                    android:id="@+id/time_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="07:41 PM"
                    android:textColor="@color/colorAccent"
                    android:textSize="17sp"
                    tools:layout_editor_absoluteX="370dp"
                    tools:layout_editor_absoluteY="135dp"
                    tools:text="07:41 PM" />

            </FrameLayout>

            <TextView
                android:id="@+id/reminder_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_half_spacing"
                android:layout_marginStart="@dimen/activity_half_spacing"
                android:layout_marginTop="@dimen/activity_half_spacing"
                android:text="@string/reminder_txt"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/reminder_icon"
                app:layout_constraintTop_toBottomOf="@+id/date_holder" />

            <TextView
                android:id="@+id/reminder_when_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="44dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reminder_occurrence_txt"
                tools:text="Mon, Tue, Wed" />

            <TextView
                android:id="@+id/reminder_occurrence_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="44dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reminder_lable"
                tools:text="Weekly" />

            <ImageView
                android:id="@+id/reminder_icon"
                android:layout_width="@dimen/task_icon_size"
                android:layout_height="@dimen/task_icon_size"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_holder"
                app:srcCompat="@drawable/repeat_reminder" />

            <ImageView
                android:id="@+id/vibration_img"
                android:layout_width="@dimen/task_icon_size"
                android:layout_height="@dimen/task_icon_size"
                android:layout_marginLeft="@dimen/activity_horizontal_spacing"
                android:layout_marginStart="@dimen/activity_horizontal_spacing"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reminder_when_txt"
                app:srcCompat="@mipmap/ic_vibration_black" />

            <TextView
                android:id="@+id/vibration_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_half_spacing"
                android:layout_marginStart="@dimen/activity_half_spacing"
                android:layout_marginTop="24dp"
                android:text="@string/vibration_txt"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/vibration_img"
                app:layout_constraintTop_toBottomOf="@+id/reminder_when_txt" />

            <TextView
                android:id="@+id/vibration_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="44dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vibration_lbl"
                tools:text="Yes" />

            <ImageView
                android:id="@+id/note_img"
                android:layout_width="@dimen/task_icon_size"
                android:layout_height="@dimen/task_icon_size"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vibration_txt"
                app:srcCompat="@drawable/note" />

            <TextView
                android:id="@+id/note_lbl"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/task_icon_size"
                android:layout_marginLeft="@dimen/activity_half_spacing"
                android:layout_marginStart="@dimen/activity_half_spacing"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/note_txt"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/note_img"
                app:layout_constraintTop_toBottomOf="@+id/vibration_txt" />

            <TextView
                android:id="@+id/note_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_style"
                android:ems="3"
                android:gravity="top"
                android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
                android:lines="3"
                android:overScrollMode="always"
                android:padding="10dp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textColor="@color/date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note_img"
                tools:text="Some examplary code  for the Note." />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>